# py-acgimg-bot

./: .gitignore  Dockerfile  README.md  bot.py  configs.py  defines.py  docker-compose-all.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/scripts/: install-system-deps.sh
.github/workflows/: docker-publish.yml  pr-ci-poetry.yml  pr-ci.yml
exceptions/: BadRequestError.py
exps/: GroupBlockedError.py  UserBlockedError.py  __init__.py
handlers/: __init__.py  all_handlers.py  registry.py
handlers/callback_handlers/: __init__.py  callback_handler.py  guard_handler.py  option_panel_handler.py  original_image_handler.py  panel_utils.py
handlers/command_handlers/: __init__.py  add_pixiv_handler.py  admin_handler.py  all_command_handlers.py  group_guard_handler.py  option_handler.py  p_info_handler.py  setu_handler.py
handlers/message_handlers/: AcgimgMessageHandler.py  all_message_handlers.py  group_guard.py  guard_add_keyword.py  guard_remove_keyword.py  guard_set_message.py  guard_set_timeout.py  index.py  root.py  set_backblaze_appid.py  set_cache_redis.py  set_cache_ttl.py  set_pixiv_token.py  set_user_nickname.py
messase_generator/: __init__.py  bot_admin.py  config_group.py  config_user.py
models/: __init__.py  active_message_handler.py  command_history.py  configs.py  group_chat_history.py  group_guard.py  groups.py  illustrations.py  pixiv_tokens.py  private_chat_history.py  users.py
registries/: __init__.py  active_message_handler_registry.py  command_history_registry.py  config_registry.py  engine.py  group_registry.py  illust_registry.py  user_registry.py
routers/: __init__.py  admin.py  commands.py  configs.py  dashboard.py  groups.py  private.py
services/: __init__.py  admin_store.py  command_history.py  group_guard.py  illustration_importer.py  message_logging.py  original_image_manager.py  permissions.py  pixiv_service.py  schema_migrator.py  telegram_cache.py
services/file_service/: __init__.py  conf.py  download_file.py  file_lock.py  get_file.py
services/image_service/: __init__.py  (+1 more)
utils/: __init__.py  delete_messages.py  is_group_type.py  list_utils.py  logging_config.py
webui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+50 files in other folders)
