[tool.poetry]
name = "py-acgimg-bot"
version = "0.1.0"
description = ""
authors = ["Expliyh <expliyh@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
python-telegram-bot = {extras = ["all"], version = "^20.7"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncmy = "^0.2.9"
mariadb = "^1.1.9"
python-dotenv = "^1.0.0"
singleton-class-decorator = "^1.0.1"
aiofiles = "^23.2.1"
aiohttp = "^3.9.1"
aiorwlock = "^1.3.0"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
